Fix compile issue for url encoder